# toolkit_pkg

./: .gitignore  LICENSE  README.md  debug.ipynb  performance.json  pyproject.toml  setup.cfg  watchdog_data.json
config/: train_config.json
nlp/: dataset.py
toolkit/: __init__.py  configuration.py  enums.py  json_en_de.py  logger.py
toolkit/chart/: __init__.py  barChart.py  chartbase.py  histogram.py  lineChart.py
toolkit/config/: __init__.py  config_base.py  trainconfig.py
toolkit/integration/: deepspeed.py  deepspeed.py.bak  deepspeed.py.bak2
toolkit/metric/: __init__.py  _metricdict.py  classification_metrics.py  diversity.py  diversity_metrics.py  metric_base.py  metricdict.py  metricdict_bak.py  ranking_metrics.py  rouge.py  similarity.py  similarity_metrics.py  utils.py
toolkit/metric/old/: diversity.py
toolkit/metric/utils/: tokenizer.py
toolkit/module/: __init__.py  ffn.py  loss.py
toolkit/nlp/: __init__.py  config.py  conversation.py  data.py  data.py.bak  data.py.old  dataset.py  enums.py  nlptrainconfig.py  nlptrainingconfig.py  text.py  trainconfig.py
toolkit/scripts/: clash.sh  killtrain.sh  statusline.sh  trainScript_demo.sh  unclash.sh
toolkit/trainer/: __init__.py  checkpoint_manager.py  components.py  dataloader.py  initializer.py  watchdog.py
toolkit/training/: __init__.py  checkpoint_manager.py  components.py  dataloader.py  evaluater.py  evaluator.py  initializer.py  loss_functions.py  trainer.py  watchdog.py
toolkit/utils/: __init__.py  data.py  download_hf_models.py  download_hf_models.sh  draw.py  earlystopping.py  import_utils.py  loss_functions.py  manager.py  metricdict.py  metrics_from_tensorboard.py  misc.py  old.py  path.py  trainconfig.py  training.py  training_utils.py  watchdog.py
toolkit/utils/bak/: data.py  old.py  significance_analysis.py
toolkit/utils/versions/: dependency_versions_check.py  dependency_versions_table.py  versions.py
