# pip install --editable .

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "toolkit"
version = "0.0.1"
authors = [
    {name = "JJVV", email = "junjiewvv@gmail.com"},
]
description = "a toolkit of training neural network model"
keywords = []
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "colorlog",
    # "logging",
    "jsonlines",
    'importlib-metadata; python_version<"3.12"',
]


# [tool.setuptools.packages]
# find = {}  # Scan the project directory with the default parameters
# OR
# [tool.setuptools.packages.find]
# # All the following settings are optional:
# where = ["."]       # ["."] by default
# include = ["*"]     # ["*"] by default
# exclude = ["test*"] # empty by default
# namespaces = true   # true by default
