# [options]
# packages = find: # OR `find_namespace:` if you want to use namespaces
# # OR
[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
where=.  # . by default
include=*  # * by default
exclude=test  # empty by default